high res preview (slower but better preview quality)

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <hr/>
     <hr/>
     <button id="toggleDebug">Toggle debug</button>
+    <label><input id="chkHighRes" type="checkbox"></input>Use high res preview (slower)</label>
     
     <div id="debugstuff">
         <div class="panel">
